--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 2.2.1+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,23 +22,31 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  package_info: ^2.0.0
-  cupertino_icons: ^0.1.2
-  uuid: 2.0.1
-  toast: ^0.1.5
-  provider: ^4.1.3
-  table_calendar: ^2.2.3
-  flukit: ^1.0.2
-  shared_preferences: ^0.5.7+3
-  intl: ^0.16.1
-  flutter_printer: ^1.0.3+1
-  path_provider: ^1.6.27
-  archive: ^2.0.13
-  permission_handler: ^5.0.1+1
-  share: ^0.6.5+4
-  file_picker: ^2.1.7
+  package_info: ^2.0.2
+  cupertino_icons: ^1.0.5
+  uuid: ^3.0.7
+  toast: ^0.3.0
+  provider: ^6.0.5
+  table_calendar: ^3.0.9
+  flukit: ^3.0.1
+  shared_preferences: ^2.2.0
+  intl: ^0.18.0
+  flutter_printer: ^2.0.3
+  drift: ^2.10.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.15
+  path: ^1.8.3
+  archive: ^3.3.7
+  permission_handler: ^10.4.3
+  share: ^2.0.4
+  file_picker: ^5.3.1
+  flutter_slidable: ^3.0.0
+  flutter_form_builder: ^9.1.0
+  form_builder_validators: ^9.0.0
 
 dev_dependencies:
+  drift_dev: ^2.10.0
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
 
