--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,10 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.2.1+1
+version: 3.0.0
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,7 +22,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  package_info: ^2.0.2
+  package_info_plus: ^4.1.0
   cupertino_icons: ^1.0.5
   uuid: ^3.0.7
   toast: ^0.3.0
@@ -38,7 +38,7 @@ dependencies:
   path: ^1.8.3
   archive: ^3.3.7
   permission_handler: ^10.4.3
-  share: ^2.0.4
+  share_plus: ^7.1.0
   file_picker: ^5.3.1
   flutter_slidable: ^3.0.0
   flutter_form_builder: ^9.1.0
