--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_slidable: ^3.0.0
   flutter_form_builder: ^9.1.0
   form_builder_validators: ^9.0.0
+  fl_chart: ^0.63.0
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   drift_dev: ^2.10.0
