--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.0.0
+version: 3.0.1
 
 environment:
   sdk: ">=2.18.0 <3.0.0"
@@ -22,29 +22,29 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  package_info_plus: ^4.1.0
+  package_info_plus: ^8.1.1
   cupertino_icons: ^1.0.5
-  uuid: ^3.0.7
+  uuid: ^4.5.1
   toast: ^0.3.0
   provider: ^6.0.5
   table_calendar: ^3.0.9
-  flukit: ^3.0.1
   shared_preferences: ^2.2.0
-  intl: ^0.18.0
+  intl: ^0.19.0
   flutter_printer: ^2.0.3
   drift: ^2.10.0
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.15
   path: ^1.8.3
   archive: ^3.3.7
-  permission_handler: ^10.4.3
-  share_plus: ^7.1.0
-  file_picker: ^5.3.1
+  permission_handler: ^11.3.1
+  share_plus: ^10.1.2
+  file_picker: ^8.1.4
   flutter_slidable: ^3.0.0
   flutter_form_builder: ^9.1.0
-  form_builder_validators: ^9.0.0
-  fl_chart: ^0.63.0
-  carousel_slider: ^4.2.1
+  form_builder_validators: ^11.0.0
+  fl_chart: ^0.69.0
+  carousel_slider: ^5.0.0
+  expressions: ^0.2.5+2
 
 dev_dependencies:
   drift_dev: ^2.10.0
