--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 3.0.1
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.0 <3.24.5"
 
 dependencies:
   flutter:
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   package_info_plus: ^8.1.1
+  device_info_plus: ^9.1.2
   cupertino_icons: ^1.0.5
   uuid: ^4.5.1
   toast: ^0.3.0
