--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 3.1.0
+version: 3.1.1
 
 environment:
   sdk: ">=3.0.0 <3.24.5"
@@ -46,6 +46,7 @@ dependencies:
   fl_chart: ^0.69.0
   carousel_slider: ^5.0.0
   expressions: ^0.2.5+2
+  floating_draggable_widget: ^2.3.0
 
 dev_dependencies:
   drift_dev: ^2.10.0
